@@ -1,6 +1,6 @@
 name: EnchantMore
 main: me.exphc.EnchantMore.EnchantMore
-version: 1.0
+version: 1.0a
 website: http://dev.bukkit.org/server-mods/enchantmore/
 description: enchanted hoes, enchanted fishing rods, enchanted shears and more!
 softdepend: 
