@@ -1,3 +1,7 @@
+X   X
+    * Fix Sword + Silk Touch to no longer "capture" players (optional; capturePlayers option)
+    * Enhance Hoe + Fire Protection to show Bukkit Material for block
+
 2012-04-07  1.0
     * Add Pickaxe + Silk Touch III = harvest endercrystal (right-click)
     * Add Sword + Blast Protection = shoot fireball (right-click)
